[package]
name = "new-hope"
version = "0.1.0"
authors = ["Kamil Tomšík <info@tomsik.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", rev = "120d544" }
gl = { path = "./gl" }
